# doodle-aux-mines

./: .gitignore  LICENSE  README.md  config.py  main.py  mocks.py  pyproject.toml
db/: __init__.py  models.py  queries.py  seed.py  structure.sql
static/: style.css  styles.css
templates/: chain_history.html  index.html  new_chain.html  play.html
test/: conftest.py
test/db/: conftest.py  queries_test.py
